--- a/frontend/src/estilos/catalogo.css
+++ b/frontend/src/estilos/catalogo.css
@@ -58,7 +58,7 @@
 .contenedorLupa {
     width: 40px;
     height: 40px;
-    border-radius: 50%;
+    border-radius: 5px;
     background-color: rgba(128, 128, 128, 0.794);
     border: none;
     /* padding: 0; */
