--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,14 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-.archivo-narrow{
-  font-family: "Archivo Narrow", sans-serif;
-}
-.roboto-flex {
-  font-family: "Roboto Flex", sans-serif;
 }
 
 #root{
@@ -32,14 +27,14 @@
 } */
 
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #F94D03;
-}
+} */
 
 body {
   
@@ -48,7 +43,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
-
+/* 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -84,4 +79,11 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+.libre-franklin {
+  font-family: '"Libre Franklin", sans-serif';
+  font-optical-sizing: auto;
+  font-weight: inherit;
+  font-style: normal;
 }
