--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,31 +43,27 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
-/* 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+
 
 button {
-  border-radius: 8px;
+  /* border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  font-weight: 500; */
+  font-family: Libre Franklin;
+  /* background-color: #1a1a1a; */
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
+} 
+/* button:hover {
   border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
+} */
+/* 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -79,7 +75,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
+} */ */
 
 .libre-franklin {
   font-family: '"Libre Franklin", sans-serif';
