--- a/frontend/src/estilos/tarjetaLibros.css
+++ b/frontend/src/estilos/tarjetaLibros.css
@@ -10,3 +10,15 @@
 .css-dnrpxu-MuiCardActions-root {
     margin-bottom: 8px;
 }
+.contenedorTarjetas{
+    width: calc(90%/4);
+    margin-left: 5%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    column-gap: 5%;
+    row-gap: 35px;
+}
