--- a/frontend/src/estilos/catalogo.css
+++ b/frontend/src/estilos/catalogo.css
@@ -56,10 +56,10 @@
 }
 
 .contenedorLupa {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     border-radius: 5px;
-    background-color: rgba(128, 128, 128, 0.794);
+    background-color: #dda15e;
     border: none;
     /* padding: 0; */
 }
@@ -69,5 +69,5 @@
 }
 
 .contenedorLupa:hover {
-    background-color: #facc4f;
+    background-color: #bc6c25;
 }
