--- a/frontend/src/estilos/footer.css
+++ b/frontend/src/estilos/footer.css
@@ -1,5 +1,5 @@
 .footerContenedor{
-    margin: 0;
+    margin-top: 70px;
     padding: 0;
     width: 100vw;
     height: 80px;
@@ -7,8 +7,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-   margin-bottom: 0;
-    bottom: 0;
+   /* margin-bottom: 0;
+    bottom: 0; */
     background-color: #E5E2E1;
     color: rgb(20, 20, 20);
 }
