--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,34 +10,33 @@
   margin: 0;
   padding: 0;
 }
-/* :root {
+:root {
 
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Libre Franklin, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme: ligth;
+  color: #283618;
+  background-color: #fefae0;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-} */
+}
 
 
-/* a {
+a {
   font-weight: 500;
-  color: #646cff;
+  color: #1b1f1b;
   text-decoration: inherit;
 }
 a:hover {
-  color: #F94D03;
-} */
+  color: #bc6c25;
+}
 
 body {
-  
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -46,11 +45,11 @@ body {
 
 
 button {
-  /* border-radius: 8px;
+  border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500; */
+  font-size: 0.5em;
+  font-weight: 300;
   font-family: Libre Franklin;
   /* background-color: #1a1a1a; */
   cursor: pointer;
