--- a/frontend/src/estilos/bienvenida.css
+++ b/frontend/src/estilos/bienvenida.css
@@ -19,9 +19,9 @@
 
 .fondo {
     /* background-color: rgba(0, 0, 0, 0.5); */
-    background-color: #606c3828;
+    background-color: #dda25e56;
     width: 30%;
-    height: 88%;
+    height: 88.5%;
     margin-left: 3%;
     z-index: 100;
     position: absolute;
@@ -30,8 +30,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     text-align: left;
+ 
 
 }
 
@@ -39,14 +40,15 @@
     width: 100%;
     height: 30%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: left;
     /* margin-bottom: 1%;
     margin-left: 5%; */
     position: absolute;
-   top: 55%;
+   top: 40%;
+  bottom: 5%;
 
 
 
@@ -72,4 +74,5 @@
     text-shadow: 
       -1px -1px 1px #111, 
       1px 1.5px 1px #dda15e;
+
 }
