--- a/frontend/src/estilos/infoWeb.css
+++ b/frontend/src/estilos/infoWeb.css
@@ -1,37 +1,90 @@
 .contenedorGeneral{
     width: 100vw;
-    height: auto;
+    height: 1300px;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
-    background-color: aqua;
+    align-items: flex-start;
+    /* background-color: aqua; */
 }
 .izquierda{
     width: 30%;
-    height: auto;
+    height:100%;
+    margin-left: 3%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    background-color: rgb(0, 255, 136);
+    background-color: #dda25e44;
 }
 .fondoIzquierda{
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 90%;
-    height: 500px;
+    background-color: #dda25e44;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     text-align: center;
+    row-gap: 50px;
+}
+.contenedorGaleria{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    overflow: hidden;
+    border-radius: 50%;
+    border: 2px solid rgba(240, 52, 6, 0.945);
+    position: relative;
+    top:-50px;
+    z-index: 1000;
+}
+.contenedorGaleria>img{
+    max-width: 100%;
+    height: 100%;
 }
 .derecha{
-    width: 70%;
+    width: 69%;
     height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    background-color: rgb(47, 0, 255);
+    text-align: justify;
+    margin: 40px 0;
+    padding: 0;
 }
+.tituloBienvenida{
+    margin:auto auto 40px auto;
+}
+.contenedorTexto{
+    width: 90%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin:1% 5%;
+}
+.preguntasD{
+width: 100%;
+height: auto;
+display: flex;
+flex-direction: row;
+justify-content: flex-end;
+align-items: center;
+padding-right:30px;
+margin: 50px auto 20px auto;
+}
+.preguntasI{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left:30px;
+    margin: 50px auto 20px auto;
+    }
+    span{
+        font-weight: bold;
+    }
