ajuste de navbar segun obs

--- a/frontend/src/estilos/bienvenida.css
+++ b/frontend/src/estilos/bienvenida.css
@@ -43,7 +43,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: left;
+    text-align: center;
     /* margin-bottom: 1%;
     margin-left: 5%; */
     position: absolute;
@@ -67,12 +67,12 @@
 .titulo {
     font-weight: bold;
     padding: 1px 5px;
-    text-align: left;
+    text-align: center;
     text-rendering: optimizeLegibility;
     letter-spacing: 0.01rem;
     color:white;
     text-shadow: 
       -1px -1px 1px #111, 
       1px 1.5px 1px #dda15e;
-
+margin-bottom: 10px;
 }
