--- a/frontend/src/estilos/infoWeb.css
+++ b/frontend/src/estilos/infoWeb.css
@@ -65,26 +65,17 @@
     justify-content: space-between;
     margin:1% 5%;
 }
-.preguntasD{
+.preguntas{
 width: 100%;
 height: auto;
 display: flex;
 flex-direction: row;
-justify-content: flex-end;
+justify-content: center;
 align-items: center;
 padding-right:30px;
 margin: 50px auto 20px auto;
 }
-.preguntasI{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    padding-left:30px;
-    margin: 50px auto 20px auto;
-    }
+
     span{
         font-weight: bold;
     }
