--- a/frontend/src/estilos/bienvenida.css
+++ b/frontend/src/estilos/bienvenida.css
@@ -19,7 +19,8 @@
 
 .fondo {
     /* background-color: rgba(0, 0, 0, 0.5); */
-    background-color: #dda25e56;
+    /* background-color: #dda25e56; */
+    background-color: #68753e8f;
     width: 30%;
     height: 88.5%;
     margin-left: 3%;
