--- a/frontend/src/estilos/footer.css
+++ b/frontend/src/estilos/footer.css
@@ -1,14 +1,76 @@
 .footerContenedor{
-    margin-top: 70px;
+    /* margin-top: 70px; */
     padding: 0;
     width: 100vw;
-    height: 80px;
+    height: 200px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
    /* margin-bottom: 0;
     bottom: 0; */
-    background-color: #E5E2E1;
-    color: rgb(20, 20, 20);
+    /* background-color: #E5E2E1;
+    color: rgb(20, 20, 20); */
+    /* background-color: #606c38; */
+    color: white;
+    
+    background-image: linear-gradient(#68753ebd, #3a4123);
 }
+.contenedorRedes{
+    width: 100%;
+    height: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    column-gap: 30px;
+    color:#f8f7f3;
+    font-weight: bold;
+}
+.contenedorInfoFooter{
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+    .contenedorLogoFooter{
+        width: 55%;
+        height: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+        /* margin-right: 20px; */
+    }
+    .contenedorLogoFooter>img{
+        object-fit: contain;
+        max-width: 100%;
+        max-height: 100%;
+    
+    }
+    .contenedorEnlacesFooter{
+        width: 45%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        text-align: left;
+        column-gap: 10px;
+        margin-left: 10px;
+    }
+    .contenedorDerechos{
+        width: 100%;
+        height: 20%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        column-gap: 30px;
+        color:white;
+        font-weight: bold;
+    }
