--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+html{
+  padding: 0;
+  margin: 0;
+}
 #root{
   margin: 0;
   padding: 0;
@@ -25,7 +28,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 
 a {
   font-weight: 500;
