--- a/frontend/src/estilos/detalleLibro.css
+++ b/frontend/src/estilos/detalleLibro.css
@@ -162,9 +162,10 @@
     height: auto;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
+    column-gap: 10px;
     align-items: center;
-    margin-top: 40px;
+    margin-top: 10px;
 }
 .contenedorBotonDetalle{
     width: 100%;
