--- a/frontend/src/estilos/detalleLibro.css
+++ b/frontend/src/estilos/detalleLibro.css
@@ -5,23 +5,20 @@
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-    height: 300px;
+    height: 400px;
     margin-top: 100px;
     margin-bottom: 120px;
 }
 .detalleIzq{
-    width: 45%;
+    width: 40%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    background-color: #301607;
-
-   
 }
 .contenedorImagen {
-    width: 50%;
+    width: 60%;
     height: 90%;
     display: flex;
     flex-direction: column;
@@ -38,13 +35,12 @@
 }
 
 .contenedorCinta {
-    width: 71%;
+    width: 90%;
     height: 10%;
     display: flex;
-    /* position: relative;
-    bottom: 320px;
-   left: 10%; */
-    /* transform: rotate(-20deg); */
+    position: relative;
+   top:10%;
+   left: 15%;
 }
 
 .cinta {
