--- a/frontend/src/estilos/botones.css
+++ b/frontend/src/estilos/botones.css
@@ -4,6 +4,7 @@
     padding: 7px;
     border: none;
     border-radius: 10px;
+    text-transform: uppercase;
     
 }
 .accion:hover{
@@ -15,6 +16,7 @@
     padding: 7px;
     border: none;
     border-radius: 10px;
+    text-transform: uppercase;
 }
 .info:hover{
     background-color: #bc6c25;
@@ -25,6 +27,7 @@
     padding: 7px;
     border: none;
     border-radius: 10px;
+    text-transform: uppercase;
 }
 .focoA{
     background-color: rgba(240, 52, 6, 0.945);
@@ -32,6 +35,7 @@
     padding: 10px;
     border: none;
     border-radius: 10px;
+    text-transform: uppercase;
 }
 .focoA:hover{
     background-color: rgba(177, 39, 5, 0.993);
@@ -42,6 +46,7 @@
     padding: 10px;
     border: none;
     border-radius: 10px;
+    text-transform: uppercase;
 }
 .focoB:hover{
     background-color: #8ad336;
