--- a/frontend/src/estilos/formulariosesion.css
+++ b/frontend/src/estilos/formulariosesion.css
@@ -1,11 +1,12 @@
 form{
     width: 100%;
-    height: auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
     row-gap: 20px;
     justify-content: center;
     align-items: center;
+    background-color: white;
 }
 .filas{
 line-height: 30px;
