--- a/frontend/src/estilos/registroUsuarios.css
+++ b/frontend/src/estilos/registroUsuarios.css
@@ -1,4 +1,4 @@
-.vistaInicioSesion{
+.contenedorFormRegistro{
     width: 80%;
     height: 70vh;
     display: flex;
@@ -9,7 +9,8 @@
     margin-top: 50px;
     margin-bottom: 100px;
 }
-.contenedorGraficoFormSesion {
+
+.contenedorGraficoFormRegistro {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -21,7 +22,7 @@ background-color: #bc6c25;
     padding: 0;
 }
 
-.contenedorImagenFormSesion {
+.contenedorImagenFormRegistro {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,19 +31,19 @@ background-color: #bc6c25;
     height: 40%;
 }
 
-.contenedorImagenFormSesion>img {
+.contenedorImagenFormRegistro>img {
     width: 100%;
     height: 100%;
     overflow: hidden;
     object-fit: contain;
 }
-.contenedorTextoGraficoFormSesion{
+.contenedorTextoGraficoFormRegistro{
     width: 80%;
     height: auto;
     margin-left: 5%;
     padding: 0%;
 }
-.contenedorFormulario{
+.formCapturaDatos{
     width: 60%;
     height: 100%;
     display: flex;
