--- a/frontend/src/estilos/footer.css
+++ b/frontend/src/estilos/footer.css
@@ -127,3 +127,15 @@
     padding:0 ;
     margin: 0;
 }
+.cuadroLlamado{
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.cuadroLlamado>img{
+    width: 50%;
+    height: 80%;
+    overflow: hidden;
+}
