--- a/frontend/src/estilos/navbar.css
+++ b/frontend/src/estilos/navbar.css
@@ -13,3 +13,8 @@
     max-height: 100%;
 
 }
+.css-1d3z3hw-MuiOutlinedInput-notchedOutline{
+    border-color: none !important;
+    background-color: rgba(255, 255, 255, 0.199);
+   
+}
