--- a/frontend/src/estilos/catalogo.css
+++ b/frontend/src/estilos/catalogo.css
@@ -5,7 +5,7 @@
     align-items: center;
     height: auto;
     width: 100vw;
-    margin-top: 90px;
+    margin-top: 130px;
     margin-bottom: 70px;
 }
 
@@ -44,6 +44,9 @@
     flex-wrap: wrap;
     column-gap: 5%;
     row-gap: 35px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    margin-right: 5%;
 }
 
 .inputBuscar {
