--- a/frontend/src/estilos/footer.css
+++ b/frontend/src/estilos/footer.css
@@ -25,7 +25,7 @@
 }
 
 .contenedorTextoEstatico {
-    width: 70%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -34,11 +34,12 @@
 }
 
 .contenedorLlamados {
-    width: 30%;
+    width: 40%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    margin-right: 20px;
 
 }
 
@@ -84,34 +85,37 @@
     width: 40%;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-right: 5%;
 }
 
 .contenedorEnlacesFooter {
-    width: 100%;
-    height: 50%;
+    width: 70%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    text-align: left;
     column-gap: 50px;
-    margin-left: 10px;
     font-size: 20px;
+    color:white !important;
 }
 .contenedorRedes {
-    width: 100%;
-    height: 50%;
+    width: 30%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    column-gap: 30px;
+    /* column-gap: 30px; */
     color: #f8f7f3;
     font-weight: bold;
   
+}
+a{
+    color:white !important;
 }
 
 .contenedorDerechos {
