--- a/frontend/src/estilos/formulariosesion.css
+++ b/frontend/src/estilos/formulariosesion.css
@@ -8,15 +8,7 @@ form{
     align-items: center;
     background-color: white;
 }
-.filas{
-line-height: 30px;
-margin: 3px auto;
-width: 100%;
-display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
+
 .form-label{
     width: 20%;
     display: flex;
@@ -31,4 +23,11 @@ display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
+}
+.accionesInicioSesion{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
