--- a/frontend/src/estilos/inicioSesion.css
+++ b/frontend/src/estilos/inicioSesion.css
@@ -50,3 +50,25 @@ background-color: #bc6c25;
     justify-content: center;
     align-items: center;
 }
+.focoA{
+    background-color: rgba(240, 52, 6, 0.945);
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    text-transform: uppercase;
+}
+.focoA:hover{
+    background-color: rgba(177, 39, 5, 0.993);
+}
+.focoB{
+    background-color: #79a843;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    text-transform: uppercase;
+}
+.focoB:hover{
+    background-color: #8ad336;
+}
