--- a/frontend/src/estilos/registroUsuarios.css
+++ b/frontend/src/estilos/registroUsuarios.css
@@ -1,4 +1,4 @@
-.contenedorFormRegistro{
+.contenedorFormRegistro {
     width: 80%;
     height: 70vh;
     display: flex;
@@ -18,7 +18,7 @@
     width: 40%;
     height: 100%;
     text-align: center;
-background-color: #bc6c25;
+    background-color: #bc6c25;
     padding: 0;
 }
 
@@ -37,17 +37,49 @@ background-color: #bc6c25;
     overflow: hidden;
     object-fit: contain;
 }
-.contenedorTextoGraficoFormRegistro{
+
+.contenedorTextoGraficoFormRegistro {
     width: 80%;
     height: auto;
     margin-left: 5%;
     padding: 0%;
 }
-.formCapturaDatos{
+
+.formCapturaDatos {
     width: 60%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.focoA{
+    background-color: rgba(240, 52, 6, 0.945);
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    text-transform: uppercase;
+}
+.focoA:hover{
+    background-color: rgba(177, 39, 5, 0.993);
+}
+.focoB{
+    background-color: #79a843;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    text-transform: uppercase;
+}
+.focoB:hover{
+    background-color: #8ad336;
+}
+.accionesRegistrarUsuario{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
